--- a/leSalCoin/templates/base.html.twig
+++ b/leSalCoin/templates/base.html.twig
@@ -8,8 +8,8 @@
     </head>
     <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">home</a>
-        <a class="btn btn-primary" href="{{ path('security_add_user') }}" role="button">Signin</a>
+        <a class="navbar-brand" href="{{ path('home_page') }}">Home Page</a>
+        <a class="btn btn-primary" href="{{ path('security_add_user') }}" role="button">Sign in</a>
         <a class="btn btn-primary" href="{{ path('security_login') }}" role="button">Login</a>
         <a class="btn btn-primary" href="{{ path('security_add_annonce') }}" role="button">Add Annonce</a>
         <a class="btn btn-primary" href="{{ path('security_logout') }}" role="button">Logout</a>
