--- a/leSalCoin/templates/home/index.html.twig
+++ b/leSalCoin/templates/home/index.html.twig
@@ -1,16 +1,52 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello {{ controller_name }}!{% endblock %}
+{% block title %}Hello !{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <style>
+        .example-wrapper {
+            margin: 1em auto;
+            max-width: 800px;
+            width: 95%;
+            font: 18px/1.5 sans-serif;
+        }
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+        .example-wrapper code {
+            background: #F5F5F5;
+            padding: 2px 6px;
+        }
+    </style>
 
+    <div class="example-wrapper">
+        <h1>Liste des annonces</h1>
 
-</div>
+        {#<a href="{{ path('security_add_annonce') }}">Add Annonce</a>#}
+        <table class="table">
+            <tr>
+                <th>Name</th>
+                <th>Release On</th>
+                <th>Image</th>
+                <th>Action</th>
+            </tr>
+            {% for annonce in annonces %}
+                <tr>
+                    <td>{{ annonce.title }}</td>
+                    <td>{{ annonce.createAt |date("m d Y h:i:s") }}</td>
+                    <td><img src="http://placeholder.it/140x100"></td>
+                    {% if app.user %}
+                        <td>
+                            {% if is_granted ('IS_AUTHENTICATED_REMEMBERED') and annonce.owner == app.user %}
+                                <a onclick="return confirm('are you sure?');"
+                                   href="{{ url("security_delete_annonce", {"annonce":annonce.id}) }}">Delete</a>
+                            {% endif %}
+                        </td>
+                    {% endif %}
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="4">No content available</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
 {% endblock %}
